# physics

./: CMakeLists.txt  LICENSE  README
include/: integration.h  rotation.h  twobody.h  vectord.h
src/: integration.cpp  rotation.cpp  twobody.cpp  vectord.cpp
test/: test-integration.cpp  test-rotation.cpp  test-twobody.cpp  test-vectord.cpp
